Initial authors routes

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>start</h1>
+    <%- include('../partials/header') %>
+    <%- include('../partials/errorMessage') %>
     <%- body %>
     <h1>end</h1>
 </body>
